# ttmerge

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: docs.yml
docs/: make.py
src/ttmerge/: __init__.py  merging_model.py
